tests/snapshots/paste_operations_test__p_then_P.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:
line 1
line 1
[l]ine 1
line 2
line 3
