tests/snapshots/paste_operations_test__p_with_count_linewise.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 1
line 2
