tests/snapshots/paste_operations_test__paste_at_end_of_file_no_newline.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
line 1
line 2line 1
[ ]
