tests/snapshots/paste_operations_test__paste_empty_buffer.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
hello[ ]
