tests/snapshots/paste_operations_test__paste_into_indented_context.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
plain
    indentedplain
[ ]
