tests/snapshots/paste_operations_test__paste_multiple_lines.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 7:0
Lines: 8

Buffer:
a
b
c
d
ea
b
c
[ ]
