tests/snapshots/paste_operations_test__paste_with_visual_selection.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 4

Buffer:
hello
world
[h]ello
test
