tests/snapshots/paste_operations_test__yank_and_paste_single_char.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 1

Buffer:
ab[c]
