tests/snapshots/paste_operations_test__yank_delete_paste.snap
---
source: tests/paste_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:13
Lines: 1

Buffer:
hello tworld [e]st
